[gd_scene load_steps=7 format=3 uid="uid://1q6rp0t4rh72"]

[ext_resource type="Script" path="res://Scripts/Objects/Levels/TestLevel/BreakableMountain.gd" id="1_oxw1c"]
[ext_resource type="Texture2D" uid="uid://c1x100m2wxobm" path="res://Sprites/Levels/TestLevel/GodzillaMoMWilderness.png" id="1_ppbww"]
[ext_resource type="PackedScene" uid="uid://camascwoory5h" path="res://Objects/HealthComponent.tscn" id="2_k6k24"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gssje"]
size = Vector2(32, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mnffa"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1lues"]
size = Vector2(32, 24)

[node name="BreakableMountain" type="StaticBody2D"]
collision_layer = 2
script = ExtResource("1_oxw1c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -24)
shape = SubResource("RectangleShape2D_gssje")
debug_color = Color(0.587198, 0.518021, 0.504798, 0.42)

[node name="TopPart" type="StaticBody2D" parent="."]
position = Vector2(1, -36)

[node name="Sprite" type="Sprite2D" parent="TopPart"]
texture = ExtResource("1_ppbww")
region_enabled = true
region_rect = Rect2(403, 22, 18, 30)

[node name="HealthComponent" parent="TopPart" instance=ExtResource("2_k6k24")]
value = 4.0
max_value = 4.0
enemy = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopPart"]
position = Vector2(-1, -4)
shape = SubResource("RectangleShape2D_mnffa")

[node name="BottomPart" type="StaticBody2D" parent="."]
position = Vector2(1, -14)

[node name="Sprite" type="Sprite2D" parent="BottomPart"]
texture = ExtResource("1_ppbww")
region_enabled = true
region_rect = Rect2(394, 60, 34, 30)

[node name="HealthComponent" parent="BottomPart" instance=ExtResource("2_k6k24")]
value = 4.0
max_value = 4.0
enemy = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomPart"]
position = Vector2(-1, 2)
shape = SubResource("RectangleShape2D_1lues")

[connection signal="damaged" from="TopPart/HealthComponent" to="." method="_on_top_health_damaged"]
[connection signal="dead" from="TopPart/HealthComponent" to="." method="_on_top_health_dead"]
[connection signal="damaged" from="BottomPart/HealthComponent" to="." method="_on_bottom_health_damaged"]
[connection signal="dead" from="BottomPart/HealthComponent" to="." method="_on_bottom_health_dead"]
